--- a/_posts/disk/2009-04-22-mdadm.markdown
+++ b/_posts/disk/2009-04-22-mdadm.markdown
@@ -1,13 +1,16 @@
 ---
 layout: post
-title:  "mdadm"
+title:  "Mdadm - подборка ссылок"
 date:   2009-04-22 17:35:45 +0400
-categories: mdadm
+categories: disk
 tags: disk
 ---
 
-# mdadm
+# Mdadm
 [http://coreit.ru/kb/raidinlinux/raidinlinux.htm](http://coreit.ru/kb/raidinlinux/raidinlinux.htm)
+
 [http://xgu.ru/wiki/mdadm](http://xgu.ru/wiki/mdadm)
+
 [http://help.ubuntu.ru/wiki/%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BD%D1%8B%D0%B9_raid](http://help.ubuntu.ru/wiki/%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BD%D1%8B%D0%B9_raid)
+
 [http://habrahabr.ru/post/200194/](http://habrahabr.ru/post/200194/)
