--- a/_posts/dlink/2010-08-25-des1210-настройка.markdown
+++ b/_posts/dlink/2010-08-25-des1210-настройка.markdown
@@ -1,40 +1,34 @@
 ---
 layout: post
-title:  "des1210-настройка"
+title:  "Настройка des1210"
 date:   2010-08-25 12:09:23 +0400
 categories: dlink
 tags: dlink
 ---
 
-# des1210-настройка
+# Настройка des1210
 Включаем и прошиваем последней прошивкой
-
+```
 download firmware 10.90.90.5  DES-1210-28-B2-6-07-B027.hex
-
+```
 После прошивки запускаем скрипт
+```
 ./gen-1210-config.sh
-
+```
 Необходимы параметры
+```
 OPT_82 GRZ-M01-A2-1-SW02-Pravdy23
 IP 172.28.0.109
 MASK 255.255.255.0
 GATEWAY 172.28.0.8
 MNGT_VLAN 10
 Vlan 1001
-
+```
 Затем заливаем конфиг
-
+```
 download cfg_fromTFTP 10.90.90.5 /config/des1210/LPK-M04-A4-11-SW03-Belyanskogo8.sc.int config_id 1
-
+```
 не сохраняя делаем релоад
-reload
-
-
-
+`reload`
 
 Всё
-
-
-192.168.124.107
-255.255.252.0
-192.168.124.1
