--- a/_posts/dns/2018-05-23-youtube.markdown
+++ b/_posts/dns/2018-05-23-youtube.markdown
@@ -1,14 +1,15 @@
 ---
 layout: post
-title:  "youtube"
+title:  "Forward для zone, пример с youtube"
 date:   2018-05-23 20:52:30 +0300
 categories: dns
 tags: dns
 ---
 
-# youtube
+# Forward для zone, пример с youtube
 Помимо master и slave зон в named можно указать forward зону, к примеру forward зона для домена hilik.org.ua, будет иметь такой вид:
 
+```
 zone "hilik.org.ua" {
         type forward;
         forward first;
@@ -17,6 +18,7 @@ zone "hilik.org.ua" {
                 195.149.112.1;
            };
 };
+```
 
 В описании зоны указываются ip адреса DNS серверов на которых хранится сама зона, 
 то есть попросту master и slave сервера. А смысл использования подобного типа зон заключается в том,
@@ -24,26 +26,15 @@ zone "hilik.org.ua" {
 то вам стоит описать такую зону как forward зону, она перестанет кешироваться
  у вас на сервере и все обновления будут сразу доступны на вашем ДНС сервере.
 
-
-
+```
 zone "." IN {
         type forward;
         forward only;
         forwarders {8.8.8.8; 8.8.4.4};
 };
+```
 
-
-
-
-
-
-
-
-
-
-
-
-
+```
 zone "youtube.ru" IN {
         type forward;
         forward only;
@@ -55,3 +46,4 @@ zone "youtube.com" IN {
         forward only;
         forwarders {8.8.8.8; 8.8.4.4;};
 };
+```
