--- a/_posts/git/2010-12-26-Документация_через_git.markdown
+++ b/_posts/git/2010-12-26-Документация_через_git.markdown
@@ -6,8 +6,11 @@ categories: git
 tags: git
 ---
 
-# Документация_через_git
-[https://ru.stackoverflow.com/questions/448603/](https://ru.stackoverflow.com/questions/448603/)Контроль-версий-для-файлов-ms-office-libre-office-и-других-xml-based
+# Документация через git
+
+Контроль-версий-для-файлов-ms-office-libre-office-и-других-xml-based
+
+[https://ru.stackoverflow.com/questions/448603/](https://ru.stackoverflow.com/questions/448603/)
 
 Как правильно организовать хранение?
 
