--- a/_posts/hardware/2018-12-13-bypass.markdown
+++ b/_posts/hardware/2018-12-13-bypass.markdown
@@ -1,10 +1,25 @@
 ---
 layout: post
-title:  "bypass"
+title:  "Сетевая карта с bypass"
 date:   2018-12-13 00:08:52 +0300
 categories: hardware
 tags: hardware
 ---
 
-# bypass
+# Сетевая карта с bypass
 [http://shop.nag.ru/catalog/02273.Setevye-karty/20415.Setevye-karty-s-Bypass/14973.PE2G6BPi35-SD](http://shop.nag.ru/catalog/02273.Setevye-karty/20415.Setevye-karty-s-Bypass/14973.PE2G6BPi35-SD)
+
+
+```
+Сетевой адаптер PE2G6BPi35-SD может работать в трех режимах: Normal, Disconnect и Bypass.
+
+В режиме Normal все порты представляют из себя независимые интерфейсы.
+
+В режиме Bypass, все пакеты получаемые от одного порта передаются в соседний. В этом режиме соединения Ethernet-портов отключены от системы и коммутируются между портами для создания loop-back кросс-соединений между Ethernet портами. Таким образом в режиме Bypass все пакеты полученные нак один порт передаются на соседний и наоборот. Эта возможность позволяет обходить систему, давшую сбой, увеличивая отказоустойчивость сети.
+
+В режиме Disconnect адаптер имитрирует отключения кабеля. В режиме Disconnect коммутатор/маршрутизатор не определяет линк от Ethernet Adapter'а. Серверные адаптеры Silicom с функцией Bypass содержат контроллер WDT (Watch Dog Timer). Драйвер карты или программное приложение могут отправлять комманды в контоллер WDT. Драйвера на карту, контроллер WDT и схема Bypass позволяют контролировать и управлять режимом работы адаптера.
+
+Сетевые карты Silicom PE2G6BPi35-SD идеально подходят для создания сегментированных сетей, обеспечения бесперебойной работы критически важных сетевых приложений, используются в высокопроизводительных серверных средах.
+
+Silicom’s Dual Port Copper Gigabit Ethernet Bypass Server adapter построен на контроллере Intel i350AM4 и Intel i350AM2. Контроллер Intel i350 поддерживает PCI-SIG Single-Root I/O виртуализацию и соотвтетствует спецификации SR-IOV.
+```
