--- a/_posts/hardware/2017-07-17-вентиляторы cisco.markdown
+++ b/_posts/hardware/2017-07-17-вентиляторы cisco.markdown
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "вентиляторы cisco"
+title:  "Вентиляторы для cisco"
 date:   2017-07-17 13:51:47 +0300
 categories: hardware
 tags: hardware
 ---
 
-# вентиляторы cisco
+# Вентиляторы для cisco
 [http://habrahabr.ru/post/142338/](http://habrahabr.ru/post/142338/)
